--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,4 +1,159 @@
 /* This file is for your main application css. */
 
-@import "./phoenix.css";
 @import "../../deps/phoenix_live_view/assets/css/live_view.css";
+
+body {
+  margin: 0;
+}
+
+.under-construction {
+  transition: background-color 0.5s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.under-construction.color-0 {
+  background-color: #24292e;
+}
+
+.under-construction.color-1,
+.under-construction.color-9 {
+  background-color: #024866;
+}
+
+.under-construction.color-2,
+.under-construction.color-8 {
+  background-color: #438eaf;
+}
+
+.under-construction.color-3,
+.under-construction.color-7 {
+  background-color: #e5e5a5;
+}
+
+.under-construction.color-4,
+.under-construction.color-6 {
+  background-color: #fabe6c;
+}
+
+.under-construction.color-5 {
+  background-color: #ff6600;
+}
+
+.logo-box {
+  margin-bottom: 10px;
+}
+
+.logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.logo-circle {
+  transition: fill 1.0s ease;
+}
+
+.logo-circle.color-0,
+.logo-circle.color-2,
+.logo-circle.color-4,
+.logo-circle.color-6,
+.logo-circle.color-8 {
+  fill: #ffffff;
+}
+
+.logo-circle.color-1,
+.logo-circle.color-3,
+.logo-circle.color-5,
+.logo-circle.color-7,
+.logo-circle.color-9 {
+  fill: #000000;
+}
+
+.logo-a {
+  transition: fill 1.0s ease;
+}
+
+.logo-a.color-0 {
+  fill: #ff6600;
+}
+
+.logo-a.color-1,
+.logo-a.color-9 {
+  fill: #fabe6c;
+}
+
+.logo-a.color-2,
+.logo-a.color-8 {
+  fill: #024866;
+}
+
+.logo-a.color-3,
+.logo-a.color-7 {
+  fill: #e5e5a5;
+}
+
+.logo-a.color-4,
+.logo-a.color-6 {
+  fill: #438eaf;
+}
+
+.logo-a.color-5 {
+  fill: #ffffff;
+}
+
+.logo-j {
+  transition: fill 1.0s ease;
+}
+
+.logo-j.color-0 {
+  fill: #024866;
+}
+
+.logo-j.color-1,
+.logo-j.color-9 {
+  fill: #438eaf;
+}
+
+.logo-j.color-2,
+.logo-j.color-8 {
+  fill: #ff6600;
+}
+
+.logo-j.color-3,
+.logo-j.color-7 {
+  fill: #fabe6c;
+}
+
+.logo-j.color-4,
+.logo-j.color-6 {
+  fill: #e5e5a5;
+}
+
+.logo-j.color-5 {
+  fill: #438eaf;
+}
+
+.content {
+  transition: color 1.0s ease;
+  text-align: center;
+  font-family: monospace;
+}
+
+.content.color-0,
+.content.color-2,
+.content.color-4,
+.content.color-6,
+.content.color-8 {
+  color: #ffffff;
+}
+
+.content.color-1,
+.content.color-3,
+.content.color-5,
+.content.color-7,
+.content.color-9 {
+  color: #000000;
+}
